Enum for korrigering-resultat
